# CSE211-Fall25

./: .env.example  .gitignore  .gitmessage  CLAUDE.md  README.md  SETUP.md  StackQuestionsMember.tpp  StackQuestionsNonMember.tpp  config-lab1.yaml  config-lab2.yaml  config-lab3.yaml  config.yaml  config_multi.yaml  jplag_runner.py  pyproject.toml
backend/: README.md  main.py
backend/models/: api_models.py
backend/routers/: config.py  detection.py  files.py  projects.py
backend/services/: config_service.py  detection_service.py  file_service.py
plagdet/: __init__.py
plagdet/cli/: __init__.py
plagdet/cli/commands/: __init__.py  aggregate.py  config.py  plugins.py  report.py  run.py  utilities.py
plagdet/core/: config.py  engine.py  exceptions.py  registry.py
plagdet/core/models/: __init__.py  config.py  detection.py
plagdet/factories/: __init__.py  base.py  detector_factory.py  output_factory.py  processor_factory.py
plagdet/handlers/: __init__.py  aggregate_handler.py  config_handler.py  plugin_handler.py  report_handler.py  run_handler.py  utility_handler.py
plagdet/plugins/: __init__.py  base.py  protocols.py
plagdet/plugins/detectors/: __init__.py  copydetect_detector.py  dolos.py  jplag.py  moss.py
plagdet/plugins/models/: __init__.py  detectors.py  outputs.py  processors.py
plagdet/plugins/outputs/: __init__.py  csv.py  json.py
plagdet/plugins/processors/: __init__.py  encoding_normalizer.py  normalizer.py  unzipper.py
plagdet/services/: __init__.py  aggregation.py  cleanup.py  output.py
plagdet/ui/: __init__.py  console.py  formatters.py  progress.py  themes.py
section1/labwork1-Even/AHMET_ZEKI_IHTIYAROGLU/: LinkedListQuestions.cpp
section1/labwork1-Even/ALGUHAN_KURULAR/: LinkedListQuestions.cpp
section1/labwork1-Even/ALP_DIKMEN/: LinkedListQuestions.cpp
section1/labwork1-Even/ALP_EMRE_BAYBUGA/: LinkedListQuestions2.cpp
section1/labwork1-Even/AYSE_ALKAN/: LinkedListQuestions.cpp
section1/labwork1-Even/BARIS_SAHIN/: LinkedListQuestions.cpp
section1/labwork1-Even/BORA_ERDEM_ALAN/: LinkedListQuestions.cpp
section1/labwork1-Even/CLAUDE/: LinkedListQuestions.cpp
section1/labwork3-Odd/: signatures.md
(+433 files in other folders)
